# fastapi-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_app.py  train.py
app/: main.py  test_app.py  train.py
app/templates/: index.html
