[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["amaotone <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.19.5"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
flask = "^1.1.2"
palmerpenguins = "^0.1.4"
requests = "^2.25.1"
typing-extensions = "^3.7.4"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=60